--- a/tests/Application/config/packages/meteo_concept_hcaptcha.yaml
+++ b/tests/Application/config/packages/meteo_concept_hcaptcha.yaml
@@ -1,9 +1,4 @@
-parameters:
-  hcaptcha_site_key: '%env(resolve:HCAPTCHA_SITE_KEY)%'
-  hcaptcha_secret: '%env(resolve:HCAPTCHA_SECRET)%'
-
 meteo_concept_h_captcha:
   hcaptcha:
-    site_key: '%hcaptcha_site_key%'
-    secret: '%hcaptcha_secret%'
-  validation: 'strict'
+    site_key: '%env(resolve:HCAPTCHA_SITE_KEY)%'
+    secret: '%env(resolve:HCAPTCHA_SECRET)%'
