--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,9 @@
     ],
     "require": {
         "sylius/sylius": "^1.4",
-        "meteo-concept/hcaptcha-bundle": "^2.3"
+        "meteo-concept/hcaptcha-bundle": "^2|^3"
     },
     "require-dev": {
-        "behat/mink": "^1.8",
         "behat/behat": "^3.7",
         "dmore/behat-chrome-extension": "^1.3",
         "dmore/chrome-mink-driver": "^2.7",
@@ -31,9 +30,9 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-doctrine": "^0.12.33",
         "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "0.12.12",
+        "phpstan/phpstan-webmozart-assert": "^0.12.12",
         "phpunit/phpunit": "^9.5",
-        "sylius-labs/coding-standard": "^4.0.2",
+        "sylius-labs/coding-standard": "^4.1.1",
         "symfony/browser-kit": "^4.4 || ^5.2",
         "symfony/debug-bundle": "^4.4 || ^5.2",
         "symfony/dotenv": "^4.4 || ^5.2",
@@ -45,7 +44,8 @@
         "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev"
     },
     "suggest": {
-        "symfony/http-client": "A Symfony component that implements PSR-18 HTTP client interface"
+        "symfony/http-client": "A Symfony component that implements PSR-18 HTTP client interface",
+        "nyholm/psr7": "A library that implements PSR-7 HTTP client interface"
     },
     "autoload": {
         "psr-4": { "FluxSE\\SyliusHCaptchaPlugin\\": "src/" }
