--- a/tests/Behat/Resources/suites.yaml
+++ b/tests/Behat/Resources/suites.yaml
@@ -2,20 +2,20 @@
 
 default:
     suites:
-        ui_requesting_contact_with_captcha:
-            contexts:
-                - sylius.behat.context.hook.doctrine_orm
-
-                - sylius.behat.context.transform.shared_storage
-
-                - sylius.behat.context.setup.channel
-
-                - sylius.behat.context.ui.email
-                - sylius.behat.context.ui.shop.contact
-                - flux-se.sylius.hcaptcha.behat.context.ui.shop.contact
-
-            filters:
-                tags: "@requesting_contact_with_captcha && @ui"
+#        ui_requesting_contact_with_captcha:
+#            contexts:
+#                - sylius.behat.context.hook.doctrine_orm
+#
+#                - sylius.behat.context.transform.shared_storage
+#
+#                - sylius.behat.context.setup.channel
+#
+#                - sylius.behat.context.ui.email
+#                - sylius.behat.context.ui.shop.contact
+#                - flux-se.sylius.hcaptcha.behat.context.ui.shop.contact
+#
+#            filters:
+#                tags: "@requesting_contact_with_captcha && @ui"
 
         ui_customer_registration_with_captcha:
             contexts:
