--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "meteo-concept/hcaptcha-bundle": "^2|^3"
     },
     "require-dev": {
+        "ext-json": "*",
         "behat/behat": "^3.7",
-        "dmore/behat-chrome-extension": "^1.3",
-        "dmore/chrome-mink-driver": "^2.7",
-        "friends-of-behat/mink": "^1.8",
+        "behat/mink": "^1.9",
+        "dmore/behat-chrome-extension": "^1.4",
+        "dmore/chrome-mink-driver": "^2.8",
+        "friends-of-behat/mink": "^1.9",
         "friends-of-behat/mink-browserkit-driver": "^1.4",
         "friends-of-behat/mink-debug-extension": "^2.0",
         "friends-of-behat/mink-extension": "^2.4",
@@ -27,20 +29,22 @@
         "friends-of-behat/variadic-extension": "^1.3",
         "nyholm/psr7": "^1.4",
         "phpspec/phpspec": "^7.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-doctrine": "^0.12.33",
-        "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "^0.12.12",
+        "phpstan/extension-installer": "^1.2",
+        "phpstan/phpstan-doctrine": "^1",
+        "phpstan/phpstan-strict-rules": "^1",
+        "phpstan/phpstan-webmozart-assert": "^1",
         "phpunit/phpunit": "^9.5",
-        "sylius-labs/coding-standard": "^4.1.1",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/http-client": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "matthiasnoback/symfony-config-test": "^4.1",
-        "vimeo/psalm": "^4.6.4"
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "sylius-labs/coding-standard": "^4.0",
+        "symfony/browser-kit": "^5.4|^6.0",
+        "symfony/debug-bundle": "^5.4|^6.0",
+        "symfony/dotenv": "^5.4|^6.0",
+        "symfony/http-client": "^5.4|^6.0",
+        "symfony/intl": "^5.4|^6.0",
+        "symfony/runtime": "^5.4|^6.0",
+        "symfony/web-profiler-bundle": "^5.4|^6.0",
+        "symfony/webpack-encore-bundle": "^1.16",
+        "vimeo/psalm": "^4|^5"
     },
     "suggest": {
         "symfony/http-client": "A Symfony component that implements PSR-18 HTTP client interface",
@@ -50,22 +54,37 @@
         "psr-4": { "FluxSE\\SyliusHCaptchaPlugin\\": "src/" }
     },
     "autoload-dev": {
-        "psr-4": { "Tests\\FluxSE\\SyliusHCaptchaPlugin\\": "tests/" }
+        "psr-4": {
+            "Tests\\FluxSE\\SyliusHCaptchaPlugin\\": "tests/",
+            "Tests\\FluxSE\\SyliusHCaptchaPlugin\\App\\": "tests/Application/src/"
+        }
     },
     "scripts": {
         "post-install-cmd": [
-            "php bin/create_node_symlink.php"
+            "@php bin/create_node_symlink.php"
         ],
         "post-update-cmd": [
-            "php bin/create_node_symlink.php"
+            "@php bin/create_node_symlink.php"
         ],
         "post-create-project-cmd": [
-            "php bin/create_node_symlink.php"
+            "@php bin/create_node_symlink.php"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true,
+            "symfony/thanks": true,
+            "symfony/runtime": true
+        }
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
+        },
+        "runtime": {
+            "project_dir": "tests/Application",
+            "dotenv_path": "tests/Application/.env"
         }
     }
 }
