--- a/tests/Application/.env
+++ b/tests/Application/.env
@@ -28,6 +28,17 @@ JWT_PASSPHRASE=acme_plugin_development
 MAILER_URL=smtp://localhost
 ###< symfony/swiftmailer-bundle ###
 
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=sync://
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
+
 ###> meteo-concept/hcaptcha-bundle ###
 HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
 HCAPTCHA_SECRET=0x0000000000000000000000000000000000000000
