--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -159,8 +159,9 @@ jobs:
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: "${{ matrix.php }}"
-                    extensions: intl
-                    tools: flex,symfony
+                    ini-values: date.timezone=Europe/Paris, opcache.enable=1, opcache.enable_cli=0, opcache.memory_consumption=512, opcache.max_accelerated_files=65407, opcache.interned_strings_buffer=8, opcache.validate_timestamps=0, opcache.save_comments=1, opcache.fast_shutdown=0
+                    extensions: intl, gd, opcache, mysql, pdo_mysql
+                    tools: flex, symfony
                     coverage: none
 
             -
@@ -168,10 +169,6 @@ jobs:
                 uses: actions/setup-node@v3
                 with:
                     node-version: "${{ matrix.node }}"
-
-            -
-                name: Shutdown default MySQL
-                run: sudo service mysql stop
 
             -
                 name: Setup MySQL
@@ -233,6 +230,10 @@ jobs:
                 run: composer install --no-interaction
                 env:
                     SYMFONY_REQUIRE: ${{ matrix.symfony }}
+
+            -
+                name: Install Behat driver
+                run: vendor/bin/bdi detect drivers
 
             -
                 name: Get Yarn cache directory
