--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -4,7 +4,7 @@ imports:
 
 default:
     extensions:
-        DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
+        Robertfausk\Behat\PantherExtension: ~
 
         FriendsOfBehat\MinkDebugExtension:
             directory: etc/build
@@ -15,14 +15,36 @@ default:
             files_path: "%paths.base%/vendor/sylius/sylius/src/Sylius/Behat/Resources/fixtures/"
             base_url: "https://127.0.0.1:8080/"
             default_session: symfony
-            javascript_session: chrome_headless
+            javascript_session: panther
             sessions:
                 symfony:
                     symfony: ~
-                chrome_headless:
-                    chrome:
-                        api_url: http://127.0.0.1:9222
-                        validate_certificate: false
+                panther:
+                    panther:
+                        options:
+                            browser: 'chrome'
+                            webServerDir: '%paths.base%/public'
+                            external_base_uri: https://127.0.0.1:8080/'
+                        kernel_options:
+                            APP_ENV: test_cached
+                            APP_DEBUG: false
+                        manager_options:
+                            connection_timeout_in_ms: 5000
+                            request_timeout_in_ms: 120000
+                            capabilities:
+                                browserName: chrome
+                                browser: chrome
+                                extra_capabilities:
+                                    chromeOptions:
+                                        args:
+                                            - "--window-size=2880,1800"
+                                            - "--headless"
+                                            - "start-fullscreen"
+                                            - "start-maximized"
+                                            - "no-sandbox"
+                                acceptSslCerts: true
+                                acceptInsecureCerts: true
+                                unexpectedAlertBehaviour: accept
             show_auto: false
 
         FriendsOfBehat\SymfonyExtension:
