--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,6 @@
         "ext-json": "*",
         "behat/behat": "^3.7",
         "behat/mink": "^1.9",
-        "dmore/behat-chrome-extension": "^1.4",
-        "dmore/chrome-mink-driver": "^2.8",
         "friends-of-behat/mink": "^1.9",
         "friends-of-behat/mink-browserkit-driver": "^1.4",
         "friends-of-behat/mink-debug-extension": "^2.0",
@@ -35,6 +33,7 @@
         "phpstan/phpstan-webmozart-assert": "^1",
         "phpunit/phpunit": "^9.5",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "robertfausk/behat-panther-extension": "^1.1",
         "sylius-labs/coding-standard": "^4.0",
         "symfony/browser-kit": "^5.4|^6.0",
         "symfony/debug-bundle": "^5.4|^6.0",
@@ -44,7 +43,8 @@
         "symfony/runtime": "^5.4|^6.0",
         "symfony/web-profiler-bundle": "^5.4|^6.0",
         "symfony/webpack-encore-bundle": "^1.16",
-        "vimeo/psalm": "^4|^5"
+        "vimeo/psalm": "^4|^5",
+        "dbrekelmans/bdi": "^1.0"
     },
     "suggest": {
         "symfony/http-client": "A Symfony component that implements PSR-18 HTTP client interface",
