Only install one driver

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -229,7 +229,7 @@ jobs:
 
             -
                 name: Install Behat driver
-                run: vendor/bin/bdi detect drivers
+                run: vendor/bin/bdi browser:google-chrome drivers
 
             -
                 name: Get Yarn cache directory
