--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "sylius/sylius": "^1.4",
-        "meteo-concept/hcaptcha-bundle": "^2|^3"
+        "meteo-concept/hcaptcha-bundle": ">=2"
     },
     "require-dev": {
         "ext-json": "*",
