--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [ 8.0 ]
-                symfony: [ ^5.4, ^6.0 ]
+                php: [ 8.2 ]
+                symfony: [ ^6.4, ^7.1 ]
 
         steps:
             -
@@ -108,43 +108,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [7.3, 7.4, 8.0]
-                symfony: [^5.4, ^6.0]
-                sylius: [~1.9.0, ~1.10.0, ~1.11.0, ~1.12.0]
-                node: [18.x]
-                mysql: [5.7]
-
-                exclude:
-                    -
-                        sylius: ~1.9.0
-                        php: 8.0
-                    -
-                        sylius: ~1.10.0
-                        php: 7.3
-                    -
-                        sylius: ~1.10.0
-                        symfony: ^6.0
-                    -
-                        sylius: ~1.11.0
-                        php: 7.3
-                    -
-                        sylius: ~1.11.0
-                        php: 7.4
-                    -
-                        sylius: ~1.11.0
-                        symfony: ^6.0
-                    -
-                        sylius: ~1.12.0
-                        php: 7.3
-                    -
-                        sylius: ~1.12.0
-                        php: 7.4
-                    -
-                        php: 7.3
-                        symfony: ^6.0
-                    -
-                        php: 7.4
-                        symfony: ^6.0
+                php: [8.2, 8.3]
+                symfony: [^6.4, ^7.1]
+                sylius: [~2.0.0]
+                node: [20.x]
+                mysql: [8]
 
         env:
             APP_ENV: test
