--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "sylius/sylius": "^1.4",
+        "sylius/sylius": "^2.0",
         "meteo-concept/hcaptcha-bundle": ">=2"
     },
     "require-dev": {
@@ -35,13 +35,13 @@
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "robertfausk/behat-panther-extension": "^1.1",
         "sylius-labs/coding-standard": "^4.0",
-        "symfony/browser-kit": "^5.4|^6.0",
-        "symfony/debug-bundle": "^5.4|^6.0",
-        "symfony/dotenv": "^5.4|^6.0",
-        "symfony/http-client": "^5.4|^6.0",
-        "symfony/intl": "^5.4|^6.0",
-        "symfony/runtime": "^5.4|^6.0",
-        "symfony/web-profiler-bundle": "^5.4|^6.0",
+        "symfony/browser-kit": "^6.4 || ^7.1",
+        "symfony/debug-bundle": "^6.4 || ^7.1",
+        "symfony/dotenv": "^6.4 || ^7.1",
+        "symfony/http-client": "^6.4 || ^7.1",
+        "symfony/intl": "^6.4 || ^7.1",
+        "symfony/runtime": "^6.4 || ^7.1",
+        "symfony/web-profiler-bundle": "^6.4 || ^7.1",
         "symfony/webpack-encore-bundle": "^1.16",
         "vimeo/psalm": "^4|^5",
         "dbrekelmans/bdi": "^1.0"
