--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,11 @@
         "friends-of-behat/variadic-extension": "^1.3",
         "nyholm/psr7": "^1.4",
         "phpspec/phpspec": "^7.0",
-        "phpstan/extension-installer": "^1.2",
-        "phpstan/phpstan-doctrine": "^1",
-        "phpstan/phpstan-strict-rules": "^1",
-        "phpstan/phpstan-webmozart-assert": "^1",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^1.12",
+        "phpstan/phpstan-doctrine": "^1.5",
+        "phpstan/phpstan-symfony": "^1.4",
+        "phpstan/phpstan-webmozart-assert": "^1.2",
         "phpunit/phpunit": "^10",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "robertfausk/behat-panther-extension": "^1.1",
