--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "sylius/sylius": "^2.0",
+        "sylius/shop-bundle": "^2.0",
         "meteo-concept/hcaptcha-bundle": "^3|^4"
     },
     "require-dev": {
@@ -35,6 +35,7 @@
         "phpunit/phpunit": "^10",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0",
         "robertfausk/behat-panther-extension": "^1.1",
+        "sylius/sylius": "^2.0",
         "sylius-labs/coding-standard": "^4.0",
         "symfony/browser-kit": "^6.4 || ^7.1",
         "symfony/debug-bundle": "^6.4 || ^7.1",
