--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,12 +1,10 @@
-sylius_ui:
-    events:
-        sylius.shop.contact.request.form:
-            blocks:
-                captcha:
-                    template: '@FluxSESyliusHCaptchaPlugin/form.html.twig'
-                    priority: -10
-        sylius.shop.register.form:
-            blocks:
-                captcha:
-                    template: '@FluxSESyliusHCaptchaPlugin/form.html.twig'
-                    priority: -10
+sylius_twig_hooks:
+    hooks:
+        sylius_shop.account.register.content.form:
+            h_captcha:
+                template: '@FluxSESyliusHCaptchaPlugin/form.html.twig'
+                priority: 10
+        sylius_shop.contact.contact_request.content.form:
+            h_captcha:
+                template: '@FluxSESyliusHCaptchaPlugin/form.html.twig'
+                priority: 10
